# patchbay

./: .gitignore  AGENTS.md  Cargo.toml  DEV-VM.md  HANDOFF.md  HOLEPUNCH.md  Makefile.toml  README.md  REVIEW.md  flake.nix  lab.toml  log  qemu-vm.sh  setcap.sh
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release-rolling.yml
crates/netsim-vm/: Cargo.toml
crates/netsim-vm/src/: main.rs  util.rs  vm.rs
docs/: SUMMARY.md  book.toml  ipv6.md  patterns.md
docs/guide/: getting-started.md  nat-and-firewalls.md  running-code.md  testing.md  topology.md
docs/reference/: holepunching.md  ipv6.md  patterns.md  toml-reference.md
iroh-integration/: iroh-defaults.toml
iroh-integration/netsim/: iroh-defaults.toml
iroh-integration/netsim/sims/: iperf-1to1-udp.toml
iroh-integration/patchbay/: iroh-defaults.toml
iroh-integration/sims/: iperf-1to1-public-baseline.toml  iperf-1to1-public-compare.toml  iroh-1to1-nat-ping.toml  iroh-1to1-nat-switch.toml  iroh-1to1-nat.toml  iroh-1to1-public.toml  iroh-1to10-public.toml  iroh-switch-direct.toml
iroh-integration/sims-ported/: PORTED_FROM_RESOURCES.md  integration-iroh-1_to_1.toml  integration-iroh-1_to_3.toml  integration-iroh-2_to_2.toml  integration-iroh-2_to_4.toml  integration-iroh_full-1_to_1.toml  integration-iroh_full-1_to_1ro.toml  integration-iroh_full-1_to_1x3.toml  integration-iroh_full-1_to_3.toml  integration-relay-1_to_1.toml  integration-relay_only-1_to_1.toml  integration-relay_only-1_to_3.toml  iroh-iroh-1_to_1.toml  iroh-iroh-1_to_10.toml  iroh-iroh-1_to_3.toml  iroh-iroh-1_to_5.toml  iroh-iroh-2_to_10.toml  iroh-iroh-2_to_2.toml  iroh-iroh-2_to_4.toml  iroh-iroh-2_to_6.toml  iroh-iroh_10gb-1_to_1.toml  iroh-iroh_10gb-1_to_10.toml  iroh-iroh_10gb-1_to_3.toml  iroh-iroh_10gb-1_to_5.toml  iroh-iroh_10gb-2_to_10.toml  iroh-iroh_10gb-2_to_2.toml  iroh-iroh_10gb-2_to_4.toml  iroh-iroh_10gb-2_to_6.toml  iroh-iroh_200ms-1_to_1.toml  iroh-iroh_200ms-1_to_10.toml  iroh-iroh_200ms-1_to_3.toml  iroh-iroh_200ms-1_to_5.toml  iroh-iroh_200ms-2_to_10.toml  iroh-iroh_200ms-2_to_2.toml  iroh-iroh_200ms-2_to_4.toml  iroh-iroh_200ms-2_to_6.toml  iroh-iroh_20ms-1_to_1.toml  iroh-iroh_20ms-1_to_10.toml  iroh-iroh_20ms-1_to_3.toml  iroh-iroh_20ms-1_to_5.toml  (+87 more)
netsim/: Cargo.toml
netsim-core/: Cargo.toml
netsim-core/src/: core.rs  lab.rs  lib.rs  netlink.rs  netns.rs  qdisc.rs  test_utils.rs  tests.rs
netsim-utils/: Cargo.toml
netsim-vm/: Cargo.toml
netsim/examples/: simple.rs
netsim/src/: lib.rs  main.rs
netsim/src/sim/: mod.rs  report.rs  runner.rs  steps.rs
patchbay/: Cargo.toml
patchbay-runner/: Cargo.toml
patchbay-runner/examples/: simple.rs
patchbay-runner/src/: fmt_log.rs  lib.rs  main.rs
patchbay-runner/src/sim/: env.rs  mod.rs  report.rs  runner.rs  steps.rs  topology.rs
patchbay-server/: Cargo.toml  patchbay-serve.service
patchbay-server/src/: lib.rs  main.rs
patchbay-utils/: Cargo.toml
patchbay-utils/src/: lib.rs
patchbay-vm/: Cargo.toml
patchbay-vm/src/: main.rs  vm.rs
patchbay/examples/: simple.rs
patchbay/src/: config.rs  consts.rs  core.rs  event.rs  firewall.rs  handles.rs  lab.rs  lib.rs  nat.rs  nat64.rs  netlink.rs  netns.rs  qdisc.rs  stubs.rs  test_utils.rs  tests.rs  tracing.rs  types_portable.rs  userns.rs  writer.rs
patchbay/src/tests/: devtools.rs  dns.rs  firewall.rs  hairpin.rs  holepunch.rs  iface.rs  ipv6.rs  ipv6_ll.rs  lifecycle.rs  link_condition.rs  mod.rs  mtu.rs  nat.rs  nat64.rs  nat_rebind.rs  preset.rs  region.rs  route.rs  smoke.rs
plans/: PLAN.md  devtools-ui.md  dns.md  ergonomics.md  initial.md  ipv6-linklocal.md  ipv6.md  iroh-isolation.md  iroh-netsim.md  netsim-vm-split.md  new-api.md  no-sudo.md  real-world-conditions.md  region-routing.md  review-maintainability.md  rootless.md  selfcontained.md  testing.md  ui.md  virtual-time.md  workspace-reorg.md
src/: assets.rs  binary_cache.rs  caps.rs  core.rs  lib.rs  main.rs  netlink.rs  netns.rs  qdisc.rs  serve.rs  userns.rs  util.rs  vm.rs
src/sim/: build.rs  capture.rs  env.rs  mod.rs  progress.rs  report.rs  runner.rs  steps.rs  topology.rs  transfer.rs
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: devtools.spec.ts  global-setup.ts  helpers.ts  iroh-1to1-nat.spec.ts  runner-sim.spec.ts
ui/e2e/fixtures/: iperf-e2e.toml  ping-e2e.toml
ui/src/: App.tsx  RunsIndex.tsx  api.ts  devtools-types.ts  index.css  main.tsx  time-format.ts  types.ts
ui/src/components/: JsonLinesTable.tsx  JsonTree.tsx  KvPairs.tsx  LogsTab.tsx  NodeDetail.tsx  PerfTab.tsx  QlogTab.tsx  TimelineTab.tsx  TopologyGraph.tsx
