[package]
name = "netsim"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/netsim-vm"]
resolver = "2"

[dependencies]
anyhow  = "1"
tokio   = { version = "1", features = ["full"] }
rtnetlink             = "0.20"
netlink-packet-route  = "0.28"
futures = "0.3"
nix     = { version = "0.30", features = ["sched", "mount", "fs", "signal", "process", "user"] }
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
n0-tracing-test = "0.3.0"
ipnet = "2.11.0"
clap        = { version = "4", features = ["derive"] }
serde_json  = "1"
regex       = "1"
reqwest     = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
flate2      = "1"
tar         = "0.4"
comfy-table = "7"
dirs        = "5"
ctrlc       = "3"
webbrowser  = "1"

[dev-dependencies]
serial_test = "3"
