[package]
name = "patchbay-runner"
version = "0.1.0"
description = "CLI runner for TOML-defined network simulations"
keywords = ["network", "namespace", "simulation", "testing"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "patchbay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
ctor = "0.2"
ctrlc = "3"
flate2 = "1"
glob = "0.3"
patchbay = { path = "../patchbay" }
patchbay-server = { path = "../patchbay-server" }
patchbay-utils = { path = "../patchbay-utils" }
nix = { version = "0.30", features = ["signal", "process"] }
rcgen = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "fs", "process"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
n0-tracing-test = "0.3.0"
serial_test = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
