[package]
name = "patchbay-server"
version = "0.1.0"
description = "Devtools server for patchbay"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "patchbay-serve"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros", "sync", "time", "fs", "io-util", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-rustls-acme = { version = "0.7", features = ["axum"] }
anyhow = "1"
async-stream = "0.3"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
axum-server = "0.7"
rustls = "0.23"
