[package]
name = "patchbay-vm"
version = "0.1.0"
description = "QEMU VM wrapper for running patchbay simulations on macOS"
keywords = ["network", "simulation", "qemu", "vm"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
flate2 = "1"
patchbay-utils = { path = "../patchbay-utils" }
patchbay-server = { path = "../patchbay-server" }
nix = { version = "0.30", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "0.8"
